--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "node-sass": "^4.14.0",
     "nuxt": "^2.0.0",
     "nuxt-buefy": "^0.3.2",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "sweetalert2": "^9.14.3"
   },
   "devDependencies": {
     "jsonwebtoken": "^8.5.1"
